--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.7.8 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "dash-portfolio" #Must be unique in Heroku
+          heroku_app_name: "nrf-dash-portfolio" #Must be unique in Heroku
           heroku_email: "nicolasroldanfajardoxd@gmail.com"
           usedocker: true
